# cpp-cmake-template

./: CMakeLists.txt  Doxyfile  README.md
cmake/Modules/: gtest.cmake
doc/: Overview.dox
src/: CMakeLists.txt  FooMain.cpp
test/: CMakeLists.txt
